// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomWorkflowForm Test Custom Workflow Form - loading 1`] = `
<div>
  <div
    class="pf-l-bullseye"
  >
    <div
      class="pf-c-empty-state"
      data-ouia-component-id="custom-workflow-form-loading"
      data-ouia-component-type="kogito-spinner"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-empty-state__content"
      >
        <div
          class="pf-c-empty-state__icon"
        >
          <span
            aria-label="Contents"
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-xl"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
        </div>
        <h3
          class="pf-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Starting workflow...
        </h3>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomWorkflowForm Test Custom Workflow Form - loading 2`] = `
<div>
  <div
    data-ouia-component-type="custom-workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form"
      data-ouia-component-type="form-renderer"
      data-ouia-safe="true"
      novalidate=""
    >
      <div>
        <div
          description="The array of numbers to be operated with"
          id="uniforms-0004-0001"
          items="[object Object]"
          required=""
        >
          <div
            class="pf-l-split pf-m-gutter"
          >
            <div
              class="pf-l-split__item"
            >
              <label>
                Numbers
              </label>
            </div>
            <div
              class="pf-l-split__item pf-m-fill"
            />
            <div
              class="pf-l-split__item"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-6"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                id="uniforms-0004-0002"
                properties="[object Object]"
                style="padding-left: 0px; padding-right: 0px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="#0088ce"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div />
        </div>
      </div>
    </form>
    <div
      class="kogito-components-common__form-footer-padding-top"
      data-ouia-component-type="form-footer"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-action-list"
        data-testid="action-list"
      >
        <div
          class="pf-c-action-list__item"
          data-testid="action-list-item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="submit"
          >
            Start
          </button>
        </div>
        <div
          class="pf-c-action-list__item"
          data-testid="action-list-item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="OUIA-Generated-Button-secondary-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="reset"
          >
            Reset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomWorkflowForm Test Custom Workflow Form rendering 1`] = `
<div>
  <div
    data-ouia-component-type="custom-workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form"
      data-ouia-component-type="form-renderer"
      data-ouia-safe="true"
      novalidate=""
    >
      <div>
        <div
          description="The array of numbers to be operated with"
          id="uniforms-0000-0001"
          items="[object Object]"
          required=""
        >
          <div
            class="pf-l-split pf-m-gutter"
          >
            <div
              class="pf-l-split__item"
            >
              <label>
                Numbers
              </label>
            </div>
            <div
              class="pf-l-split__item pf-m-fill"
            />
            <div
              class="pf-l-split__item"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                id="uniforms-0000-0002"
                properties="[object Object]"
                style="padding-left: 0px; padding-right: 0px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="#0088ce"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div />
        </div>
      </div>
    </form>
    <div
      class="kogito-components-common__form-footer-padding-top"
      data-ouia-component-type="form-footer"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-action-list"
        data-testid="action-list"
      >
        <div
          class="pf-c-action-list__item"
          data-testid="action-list-item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="submit"
          >
            Start
          </button>
        </div>
        <div
          class="pf-c-action-list__item"
          data-testid="action-list-item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="OUIA-Generated-Button-secondary-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="reset"
          >
            Reset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CustomWorkflowForm Test Custom Workflow Form with reset 1`] = `
<div>
  <div
    data-ouia-component-type="custom-workflow-form"
    data-ouia-safe="true"
  >
    <form
      class="pf-c-form"
      data-ouia-component-type="form-renderer"
      data-ouia-safe="true"
      novalidate=""
    >
      <div>
        <div
          description="The array of numbers to be operated with"
          id="uniforms-0002-0001"
          items="[object Object]"
          required=""
        >
          <div
            class="pf-l-split pf-m-gutter"
          >
            <div
              class="pf-l-split__item"
            >
              <label>
                Numbers
              </label>
            </div>
            <div
              class="pf-l-split__item pf-m-fill"
            />
            <div
              class="pf-l-split__item"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                id="uniforms-0002-0002"
                properties="[object Object]"
                style="padding-left: 0px; padding-right: 0px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="#0088ce"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div />
        </div>
      </div>
    </form>
    <div
      class="kogito-components-common__form-footer-padding-top"
      data-ouia-component-type="form-footer"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-action-list"
        data-testid="action-list"
      >
        <div
          class="pf-c-action-list__item"
          data-testid="action-list-item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="submit"
          >
            Start
          </button>
        </div>
        <div
          class="pf-c-action-list__item"
          data-testid="action-list-item"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="OUIA-Generated-Button-secondary-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="reset"
          >
            Reset
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
